CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

SET (TL_PROJECT_NAME thingylaunch)
SET (TL_PROJECT_VERS 1.2.0)

PROJECT (${TL_PROJECT_NAME} CXX C)

FIND_PACKAGE (X11)
IF (NOT X11_FOUND)
    MESSAGE (FATAL_ERROR "Could not locate X11.")
ENDIF ()

INCLUDE_DIRECTORIES (${X11_X11_INCLUDE_PATH})

ADD_EXECUTABLE (
    ${TL_PROJECT_NAME}
    bookmark.cpp
    completion.cpp
    history.cpp
    thingylaunch.cpp
    util.cpp
)

TARGET_LINK_LIBRARIES (
    ${TL_PROJECT_NAME}
    ${X11_LIBRARIES}
)

INSTALL (
    TARGETS ${TL_PROJECT_NAME}
    RUNTIME DESTINATION bin
)
