CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

SET (TL_PROJECT_NAME thingylaunch)
SET (TL_PROJECT_VERS 1.2.2)

PROJECT (${TL_PROJECT_NAME} CXX C)

FIND_PACKAGE (PkgConfig)
PKG_CHECK_MODULES (PKG_XCB xcb)
PKG_CHECK_MODULES (PKG_XCB_ICCCM xcb-icccm)
PKG_CHECK_MODULES (PKG_XCB_KEYSYMS xcb-keysyms)

INCLUDE_DIRECTORIES (
    ${PKG_XCB_INCLUDE_DIRS}
    ${PKG_XCB_ICCCM_INCLUDE_DIRS}
    ${PKG_XCB_KEYSYMS_INCLUDE_DIRS}
)

ADD_EXECUTABLE (
    ${TL_PROJECT_NAME}
    bookmark.cpp
    completion.cpp
    history.cpp
    thingylaunch.cpp
    util.cpp
)

TARGET_LINK_LIBRARIES (
    ${TL_PROJECT_NAME}
    ${PKG_XCB_LDFLAGS}
    ${PKG_XCB_ICCCM_LDFLAGS}
    ${PKG_XCB_KEYSYMS_LDFLAGS}
)

INSTALL (
    TARGETS ${TL_PROJECT_NAME}
    RUNTIME DESTINATION bin
)
